manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api-headless
  labels:
    app: simple-api
spec:
  ports:
  - port: 8080
    name: http
  clusterIP: None
  selector:
    app: simple-api
